Updated all dependencies